--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Latihan 1"
+        android:text="@string/judul"
         android:textSize="40sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -28,11 +28,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="tekan tombol dibawah ....."/>
+            android:text="@string/tv_1"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tekan saya untuk merubah tulisan diatas"
+            android:text="@string/btn_1"
             android:textAllCaps="false"/>
     </LinearLayout>
 
