--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,33 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:orientation="vertical"
-        android:gravity="center_vertical|center_horizontal">
+        android:layout_marginBottom="10dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:background="#EBE7C3">
 
         <TextView
+            android:id="@+id/tv_tulisan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_1"/>
+            android:text="@string/tv_1"
+            android:layout_marginBottom="20dp"/>
         <Button
+            android:id="@+id/btn_ubah"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_1"
             android:textAllCaps="false"/>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_tutup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#3F51B5"
+        android:text="@string/btn_2"
+        android:onClick="tutup"
+        android:textStyle="bold"/>
 
 </LinearLayout>
