--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,13 @@
         android:textColor="#3F51B5"
         android:text="@string/btn_2"
         android:onClick="tutup"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cuma nambahin ini di Dev2"
+        android:textSize="20sp"
         android:textStyle="bold"/>
 
 </LinearLayout>
